<resources>
    <string name="app_nameSMALL">BRAIN GYM</string>
    <string name="app_nameBIG">BRAIN GYM</string>
    <string name="button_nameUpdate">Обновить</string>
    <string name="button_nameStop">Стоп</string>
    <string name="button_nameStartPause">Старт</string>
    <string name="button_nameOptions">Настройки</string>
    <string name="math_name">Арифметика</string>
    <string name="math_name_options">Настройки Арифметики</string>
    <string name="mathTestExplanation">Арифметика - Решаем примеры на время</string>
    <string name="math_name_2">Арифметика</string>
    <string name="math_name_options_2">Настройки Арифметики</string>
    <string name="mathTestExplanation2">Арифметика - Решаем примеры на время</string>
    <string name="matrix_name">Матрицы Шульте</string>
    <string name="strup_name">Тест Струпа</string>
    <string name="strup_name1">Тест Струпа (сложный)</string>
    <string name="missing_symbol_name">Пропущенный символ</string>
    <string name="chain_char_name">Цепочка символов</string>
    <string name="number_search_name">Поиск набора символов</string>
    <string name="number_search_name_options">Настройки "Поиск символа"</string>
    <string name="pairs_name">Пары фигур</string>
    <string name="pairs_name_options">Настройки "Пары фигур"</string>
    <string name="rectangles_count_name">Прямоугольники</string>
    <string name="rectangles_count_name_options">Настройки "Прямоугольники"</string>
    <string name="missing_symbol_name_options">Настройки "Пропущенный символ"</string>
    <string name="strup_name_options">Настройки Тест Струпа</string>

    <string name="matrix_name_options">Настройки таблиц Шульте</string>
    <string name="chain_char_name_options">Настройки теста</string>

    <string name="strupTestExplanation">Тест Струпа - Читаем текст в уме, цвет произносим вслух</string>
    <string name="strupTestExplanation1">Тест Струпа (сложный) - Тренировка с цветами/названиями</string>
    <string name="missingSymbolTestExplanation">Пропущенный символ - Поиск пропущенного символа</string>
    <string name="numberSearchTestExplanation">Поиск числа - ищем символ в матрице</string>
    <string name="chainCharTestExplanation">Цепочка символов - сколько раз символ встречается в цепочке</string>
    <string name="pairsTestExplanation">Пары - поиск пар изображений</string>
    <string name="rectanglexCountTestExplanation">Прямоугльники -считаем количество фигур</string>
    <string name="shulte_name">Матрицы Шульте</string>
    <string name="shulteTestExplanation">Матрицы Шульте - Тренировка по матрицам Шульте</string>
    <string name="about_name">О программе</string>
    <string name="infinity">∞</string>
    <string name="aboutExplanation">Эта программа была разработана в 2016 году для личных корыстных целей завоевания мира с помощью пользователей, скачавших и использующих данную программу!</string>

    <string name="nums"> 100-Math,200-Strup,300-Matrix,400-RectCount,600-NumberSearch,700-Pairs,800-RectCount</string>
</resources>
