<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:icon="@mipmap/ic_launcher"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.whydt.brain_gym.MainActivity"
    android:id="@+id/ground"
    android:clickable="false">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/math_name"
                    android:id="@+id/button"
                    android:onClick="mathActivity_onClick"
                    android:layout_column="1"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mathTestExplanation"
                    android:id="@+id/textView"
                    android:layout_column="2"
                    android:layout_weight="50"
                    android:layout_gravity="center_vertical"
                    android:gravity="center" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strup_name"
                    android:id="@+id/button4"
                    android:layout_column="1"
                    android:onClick="StrupTestActivity_onClick"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strupTestExplanation"
                    android:id="@+id/textView2"
                    android:singleLine="false"
                    android:gravity="center"
                    android:layout_column="2"
                    android:layout_weight="50"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strup_name1"
                        android:id="@+id/button5"
                        android:layout_column="1"
                        android:onClick="StrupTestActivity_ver1_onClick"
                        android:singleLine="true"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/strupTestExplanation1"
                        android:id="@+id/textView3"
                        android:singleLine="false"
                        android:gravity="center"
                        android:layout_column="2"
                        android:layout_weight="50"
                        android:layout_gravity="center_vertical" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shulte_name"
                    android:id="@+id/button2"
                    android:layout_column="1"
                    android:onClick="MatrixActivity_onClick"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shulteTestExplanation"
                    android:id="@+id/textView7"
                    android:singleLine="false"
                    android:gravity="center"
                    android:layout_column="2"
                    android:layout_weight="50"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/missing_symbol_name"
                    android:id="@+id/button7"
                    android:layout_column="1"
                    android:onClick="MissingSymbolActivity_onClick"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/missingSymbolTestExplanation"
                    android:id="@+id/textView9"
                    android:singleLine="false"
                    android:gravity="center"
                    android:layout_column="2"
                    android:layout_weight="50"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_name"
                    android:id="@+id/button6"
                    android:layout_column="1"

                    android:onClick="AboutActivity_onClick"
                    android:layout_gravity="bottom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/textView4"
                    android:singleLine="false"
                    android:layout_column="2"
                    android:layout_weight="50"
                    android:layout_gravity="right"
                    android:gravity="left" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Выход"
                    android:id="@+id/buttonExit"
                    android:layout_column="1"
                    android:onClick="exit_onClick"
                    android:visibility="visible" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</RelativeLayout>