<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/groundMath"
        tools:context="ru.whydt.brain_gym.MathActivity"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonHome"
                android:onClick="buttonHome_onClick"
                android:background="@drawable/ic_house"
                android:layout_column="1"
                android:layout_weight="20"
                android:textSize="10sp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_nameUpdate"
                android:id="@+id/buttonMathForm"
                android:onClick="mathForm_onClick"
                 android:textSize="10sp"
                android:layout_weight="20"
                android:layout_column="2"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_nameStartPause"
                android:id="@+id/buttonMathStartPause"
                android:layout_above="@+id/chronometer_math"
                android:textSize="10sp"
                android:onClick="startPause_onClick"
                android:layout_weight="20"
                android:layout_column="3"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_nameStop"
                android:id="@+id/buttonMathClear"
                android:onClick="mathClear_onClick"
                  android:textSize="10sp"
                android:layout_weight="20"
                android:layout_column="4"
                android:layout_gravity="center" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_nameOptions"
                android:id="@+id/buttonMathOptions"
                android:onClick="mathOptions_onClick"
                android:textSize="10sp"
                android:layout_weight="20"
                android:layout_column="5"
                android:layout_gravity="center" />

        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <Chronometer
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer_math"
            android:onClick="startPause_onClick"
            android:clickable="true"
            android:textColor="#e71f1f"
            android:textSize="25dp"
            android:gravity="center"
            android:format="Time: %s"
            android:layout_weight="100"
            android:layout_gravity="center_vertical"
            android:layout_span="5" />

    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100">>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/frame"
                android:layout_span="5"
                android:layout_weight="100"
                android:background="@drawable/textview_border"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"></FrameLayout>
        </TableRow>
    </TableLayout>
