<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/groundMatrix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context="ru.brainworkout.brain_gym.MatrixActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <Button
            android:id="@+id/buttonHome"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@drawable/ic_house"
            android:onClick="buttonHome_onClick"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonMatrixStartPause"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@drawable/textview_border"
            android:onClick="startPause_onClick"
            android:text="@string/button_nameStartPause"
            android:textSize="12sp" />


        <Button

            android:id="@+id/buttonMatrixClear"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@drawable/textview_border"
            android:onClick="matrixClear_onClick"
            android:text="@string/button_nameStop"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonMatrixOptions"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@drawable/textview_border"
            android:onClick="matrixOptions_onClick"

            android:text="@string/button_nameOptions"
            android:textSize="12sp" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:visibility="visible">

        <Chronometer
            android:id="@+id/chronometer_matrix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_span="8"
            android:clickable="true"
            android:format="Time: %s"
            android:gravity="center"
            android:onClick="startPause_onClick"
            android:textColor="#e71f1f"
            android:textSize="25dp" />

    </TableRow>

    <TableRow
        android:id="@+id/trowMatrix"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_weight="0"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvMatrixTimerMaxTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginStart="12sp"
            android:layout_span="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bb1e1e" />

        <TextView
            android:id="@+id/tvMatrixTimerExTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginStart="12sp"
            android:layout_span="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bb1e1e" />

        <TextView
            android:id="@+id/tvMatrixAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginStart="12sp"
            android:layout_span="2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bb1e1e" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100">

        <TableLayout
            android:id="@+id/tableMatrix"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_span="8">

        </TableLayout>

    </TableRow>

</TableLayout>
