<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/groundNumberSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    tools:context="ru.brainworkout.braingym.NumberSearchActivity"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <Button
            android:id="@+id/buttonHome"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@drawable/ic_house"
            android:onClick="buttonHome_onClick"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonNumberSearchStartPause"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:background="@drawable/textview_border"
            android:onClick="startPause_onClick"
            android:text="@string/button_nameStartPause"
            android:textSize="12sp" />


        <Button
            android:id="@+id/buttonNumberSearchClear"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@drawable/textview_border"
            android:onClick="NumberSearchСlear_onClick"
            android:text="@string/button_nameStop"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonNumberSearchOptions"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:background="@drawable/textview_border"
            android:onClick="NumberSearchOptions_onClick"
            android:text="@string/button_nameOptions"
            android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:id="@+id/trowNumberSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_weight="0">

        <TextView
            android:id="@+id/tvNumberSearchTimerMaxTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginStart="12sp"
            android:layout_span="4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bb1e1e" />

        <TextView
            android:id="@+id/tvNumberSearchTimerExTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginStart="12sp"
            android:layout_span="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bb1e1e" />

        <TextView
            android:id="@+id/tvNumberSearchAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginStart="12sp"
            android:layout_span="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bb1e1e" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tvNumberSearchExample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="10"
            android:layout_weight="100"
            android:gravity="center"
            android:textColor="#6d6464"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100">

        <TableLayout
            android:id="@+id/tableNumberSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="10"
            android:layout_weight="100">

        </TableLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:visibility="gone">

        <Chronometer
            android:id="@+id/chronometer_number_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_span="4"
            android:layout_weight="100"
            android:clickable="true"
            android:format="Time: %s"
            android:gravity="center"
            android:onClick="startPause_onClick"
            android:textColor="#e71f1f"
            android:textSize="25dp" />

    </TableRow>


</TableLayout>
